--- a/public/index.html
+++ b/public/index.html
@@ -3,18 +3,18 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
     <title>Big Trip</title>
-
     <link rel="stylesheet" href="./css/style.css">
   </head>
-
   <body class="page-body">
     <header class="page-header">
       <div class="page-body__container  page-header__container">
         <img class="page-header__logo" src="img/logo.png" width="42" height="42" alt="Trip logo">
 
         <div class="trip-main">
+          <section class="trip-main__trip-info">
+            <!-- Информация о путешествии -->
+          </section>
           <div class="trip-main__trip-controls  trip-controls">
             <div class="trip-controls__navigation">
               <h2 class="visually-hidden">Switch trip view</h2>
@@ -25,7 +25,6 @@
               <!-- Фильтры -->
             </div>
           </div>
-
           <!-- Кнопка добавления -->
         </div>
       </div>
@@ -34,13 +33,10 @@
       <div class="page-body__container">
           <section class="trip-events">
             <h2 class="visually-hidden">Trip events</h2>
-
             <!-- Сортировка -->
-
             <!-- Контент -->
           </section>
       </div>
     </main>
-
   </body>
 </html>
